fixed the font awesome icons not showing and combined all css using scss to reduce number of http requests

--- a/contact_manager/public/stylesheets/main.css
+++ b/contact_manager/public/stylesheets/main.css
@@ -1,5 +1,3 @@
-@import url('reset.css');
-
 * {
   box-sizing: border-box;
 }
@@ -13,10 +11,6 @@ header {
   background: #654389;
   height: 100px;
   padding: 20px 0 0 0;
-}
-
-header:after {
-  content: '\e020';
 }
 
 h1 {
